# algotrades

./: .claude_resources.json  .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  MODEL_IMPROVEMENT_PLAN.md  README.md  integrate.sh  notes.md  pytest.ini  requirements-ci.txt  requirements-runtime.txt  requirements.txt  task_plan.md  test.py
.agents/: ORIGINAL_REQUEST.md
quantmodel/: .gitignore  LICENSE  README.md  pyproject.toml  run_demo.py
quantmodel/.github/workflows/: ci.yml
quantmodel/configs/: base.yaml  conservative.yaml  demo_synthetic.yaml  demo_v2_fixed.yaml  experiment_schema.json  lse_v2_fixed.yaml
quantmodel/data/: README.md
quantmodel/docs/: ACCEPTANCE.md
quantmodel/scripts/: generate_audit_report.py  ingest_data.py  run_ablations.py  run_backtest.py  run_walkforward.py
quantmodel/src/quantmodel/: __init__.py  config.py  hashing.py  logging.py  types.py
quantmodel/src/quantmodel/backtest/: engine.py  event_loop.py  results.py  state.py
quantmodel/src/quantmodel/data/: adjustments.py  calendar.py  earnings.py  loader.py  quality.py  schema.py  synthetic.py  universe.py
quantmodel/src/quantmodel/execution/: commissions.py  corporate_actions.py  fills.py  orders.py  slippage.py
quantmodel/src/quantmodel/experiments/: registry.py
quantmodel/src/quantmodel/indicators/: atr.py  donchian.py  moving_average.py  volume.py
quantmodel/tests/integration/: test_demo_synthetic.py
quantmodel/tests/unit/: test_atr.py  test_config.py  test_deflated_sharpe.py  test_donchian_leakage.py  test_sizing_heat.py  test_trail_stop.py
(+2810 files in other folders)
